<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#474747"
        tools:context=".Main2Activity">
        <EditText
            android:id="@+id/nameSingUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"

            android:drawableLeft="@drawable/ic_face_black_24dp"
            android:hint="@string/enter_your_name_here"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/emailSingUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"

            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passwordSingUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/reTypepasswordSingUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/cellnumberSingUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_phonelink_ring_black_24dp"
            android:hint="@string/cell_number"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/singUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round"
            android:padding="16dp"
            android:text="@string/sing_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/you_are_about_to_create_an_account_with_tourbd_com"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"></View>

    </LinearLayout>
</layout>