<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".SingInActivity">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"

            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/singInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round"
            android:padding="16dp"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/forgotPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"></View>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:text="@string/are_you_new_here"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/singUpTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/sing_up"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</layout>