<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        tools:context=".AddExpenseActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_directions_run_black_24dp"
            />
        <EditText
            android:id="@+id/tourExpenseDescriptionET"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"

            android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
            android:hint="@string/enter_tour_expense_description"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/tourCostET"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:hint="@string/cost"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/editTextBackground"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/saveTourCostBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round"
            android:padding="16dp"
            android:text="@string/save_cost"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <Button
            android:id="@+id/showTourCostBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round"
            android:padding="16dp"
            android:text="@string/show_cost"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/you_are_about_to_add_your_tour_expense"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"></View>

    </LinearLayout>
</layout>