<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".AddTourActivity">

        <EditText
            android:id="@+id/editTourNameET"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_directions_run_black_24dp"
            android:hint="Enter tour name here"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTourDescriptionET"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_wb_sunny_black_24dp"
            android:hint="@string/tour_description"
            android:padding="16dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editStartDateAddTourET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:focusable="false"
            android:hint="@string/tour_start_date"
            android:inputType="text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editEndDateAddTourET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:focusable="false"
            android:hint="@string/tour_end_date"
            android:inputType="text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTourBudgetET"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:hint="@string/budget"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/editSaveTourInfoAddTourBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round"
            android:padding="16dp"
            android:text="@string/update_tour_info"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/you_are_about_to_edit_about_your_tour"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"></View>
       <!-- <EditText
            android:id="@+id/testET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

    </LinearLayout>
</layout>