<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".AddMemoriesActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_your_photo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textFontWeight="100dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_center_focus_weak_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#111111"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editCaptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="multiply"
                android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
                android:hint="@string/write_your_image_caption_here"
                android:inputType="text"
                android:shadowColor="@color/white"
                android:textAlignment="center"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/addMemoriesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/yellow"
                android:padding="16dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp" />
            <Button
                android:id="@+id/showMemoriesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/yellow"
                android:padding="16dp"
                android:text="@string/open_gallery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>
</layout>