<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="8dp"
        app:contentPadding="4dp">

        <LinearLayout
            android:id="@+id/layoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".6"
                    android:text="@string/expense_type"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:text="@string/amount"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expenseTypeTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".6"
                    android:paddingLeft="10dp"
                    android:text="@string/hotel_rent"
                    android:textColor="@color/back"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/amountTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:drawableRight="@drawable/ic_directions_run_black_24dp"
                    android:paddingLeft="10dp"
                    android:text="@string/_1750"
                    android:textColor="@color/back"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/editTextBackground"></View>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>